# ipl-data-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
airflow/dags/: batch_etl_dag.py  daily_ingestion_dag.py  data_quality_dag.py  streaming_orchestration_dag.py
api/: __init__.py  main.py
api/core/: database.py
api/models/: schemas.py
api/routers/: analytics.py  matches.py  players.py  teams.py  venues.py
api/services/: analytics_service.py
config/: __init__.py  settings.py
dashboard/: __init__.py  app.py
dashboard/components/: charts.py  kpis.py
dashboard/pages/: fantasy_insights.py  live_match.py  overview.py  player_analytics.py  team_analytics.py  venue_analytics.py
dashboard/utils/: data_loader.py
data_quality/: __init__.py
data_quality/checks/: validators.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: test_positive_value.sql
dbt/snapshots/: scd_team_stats.sql
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/dashboard/: Dockerfile
docker/kafka/: Dockerfile
docker/spark/: Dockerfile
infrastructure/scripts/: init_db.sql
infrastructure/terraform/: main.tf
ingestion/: __init__.py
ingestion/simulators/: match_simulator.py
ingestion/sources/: cricsheet_parser.py  sample_data.py
kafka/: __init__.py
kafka/config/: topics.py
kafka/consumers/: spark_streaming_consumer.py
kafka/producers/: ball_event_producer.py
monitoring/: __init__.py  logger.py  metrics.py
spark_jobs/: __init__.py
spark_jobs/bronze/: ingest_raw_data.py
spark_jobs/gold/: match_analytics.py  win_probability.py
spark_jobs/silver/: transform_matches.py
spark_jobs/utils/: data_io.py  (+1 more)
(+19 files in other folders)
